cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_09304_225353356.yaml
Resources:
  famousPeepsDemoVpc963C576A:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: famousPeepsStack/famousPeepsDemoVpc
    Metadata:
      aws:cdk:path: famousPeepsStack/famousPeepsDemoVpc/Resource
  famousPeepsDemoVpcPublicSubnet1Subnet77EF7A4C:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.0.0/18
      VpcId:
        Ref: famousPeepsDemoVpc963C576A
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: famousPeepsStack/famousPeepsDemoVpc/PublicSubnet1
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
    Metadata:
      aws:cdk:path: famousPeepsStack/famousPeepsDemoVpc/PublicSubnet1/Subnet
  famousPeepsDemoVpcPublicSubnet1RouteTable432BA23B:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: famousPeepsDemoVpc963C576A
      Tags:
        - Key: Name
          Value: famousPeepsStack/famousPeepsDemoVpc/PublicSubnet1
    Metadata:
      aws:cdk:path: famousPeepsStack/famousPeepsDemoVpc/PublicSubnet1/RouteTable
  famousPeepsDemoVpcPublicSubnet1RouteTableAssociation4E00D5CD:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: famousPeepsDemoVpcPublicSubnet1RouteTable432BA23B
      SubnetId:
        Ref: famousPeepsDemoVpcPublicSubnet1Subnet77EF7A4C
    Metadata:
      aws:cdk:path: famousPeepsStack/famousPeepsDemoVpc/PublicSubnet1/RouteTableAssociation
  famousPeepsDemoVpcPublicSubnet1DefaultRoute936D6C03:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: famousPeepsDemoVpcPublicSubnet1RouteTable432BA23B
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: famousPeepsDemoVpcIGWE9CBD114
    DependsOn:
      - famousPeepsDemoVpcVPCGW672D2233
    Metadata:
      aws:cdk:path: famousPeepsStack/famousPeepsDemoVpc/PublicSubnet1/DefaultRoute
  famousPeepsDemoVpcPublicSubnet1EIP48757D25:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
    Metadata:
      aws:cdk:path: famousPeepsStack/famousPeepsDemoVpc/PublicSubnet1/EIP
  famousPeepsDemoVpcPublicSubnet1NATGateway26000C9E:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - famousPeepsDemoVpcPublicSubnet1EIP48757D25
          - AllocationId
      SubnetId:
        Ref: famousPeepsDemoVpcPublicSubnet1Subnet77EF7A4C
      Tags:
        - Key: Name
          Value: famousPeepsStack/famousPeepsDemoVpc/PublicSubnet1
    Metadata:
      aws:cdk:path: famousPeepsStack/famousPeepsDemoVpc/PublicSubnet1/NATGateway
  famousPeepsDemoVpcPublicSubnet2Subnet0A369D83:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.64.0/18
      VpcId:
        Ref: famousPeepsDemoVpc963C576A
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: famousPeepsStack/famousPeepsDemoVpc/PublicSubnet2
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
    Metadata:
      aws:cdk:path: famousPeepsStack/famousPeepsDemoVpc/PublicSubnet2/Subnet
  famousPeepsDemoVpcPublicSubnet2RouteTable2682A22E:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: famousPeepsDemoVpc963C576A
      Tags:
        - Key: Name
          Value: famousPeepsStack/famousPeepsDemoVpc/PublicSubnet2
    Metadata:
      aws:cdk:path: famousPeepsStack/famousPeepsDemoVpc/PublicSubnet2/RouteTable
  famousPeepsDemoVpcPublicSubnet2RouteTableAssociation7C368043:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: famousPeepsDemoVpcPublicSubnet2RouteTable2682A22E
      SubnetId:
        Ref: famousPeepsDemoVpcPublicSubnet2Subnet0A369D83
    Metadata:
      aws:cdk:path: famousPeepsStack/famousPeepsDemoVpc/PublicSubnet2/RouteTableAssociation
  famousPeepsDemoVpcPublicSubnet2DefaultRoute546B3C2A:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: famousPeepsDemoVpcPublicSubnet2RouteTable2682A22E
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: famousPeepsDemoVpcIGWE9CBD114
    DependsOn:
      - famousPeepsDemoVpcVPCGW672D2233
    Metadata:
      aws:cdk:path: famousPeepsStack/famousPeepsDemoVpc/PublicSubnet2/DefaultRoute
  famousPeepsDemoVpcPrivateSubnet1SubnetB4DDB959:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.128.0/18
      VpcId:
        Ref: famousPeepsDemoVpc963C576A
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: famousPeepsStack/famousPeepsDemoVpc/PrivateSubnet1
        - Key: aws-cdk:subnet-name
          Value: Private
        - Key: aws-cdk:subnet-type
          Value: Private
    Metadata:
      aws:cdk:path: famousPeepsStack/famousPeepsDemoVpc/PrivateSubnet1/Subnet
  famousPeepsDemoVpcPrivateSubnet1RouteTable29C180DB:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: famousPeepsDemoVpc963C576A
      Tags:
        - Key: Name
          Value: famousPeepsStack/famousPeepsDemoVpc/PrivateSubnet1
    Metadata:
      aws:cdk:path: famousPeepsStack/famousPeepsDemoVpc/PrivateSubnet1/RouteTable
  famousPeepsDemoVpcPrivateSubnet1RouteTableAssociationEA70DEC7:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: famousPeepsDemoVpcPrivateSubnet1RouteTable29C180DB
      SubnetId:
        Ref: famousPeepsDemoVpcPrivateSubnet1SubnetB4DDB959
    Metadata:
      aws:cdk:path: famousPeepsStack/famousPeepsDemoVpc/PrivateSubnet1/RouteTableAssociation
  famousPeepsDemoVpcPrivateSubnet1DefaultRoute59FC7E66:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: famousPeepsDemoVpcPrivateSubnet1RouteTable29C180DB
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: famousPeepsDemoVpcPublicSubnet1NATGateway26000C9E
    Metadata:
      aws:cdk:path: famousPeepsStack/famousPeepsDemoVpc/PrivateSubnet1/DefaultRoute
  famousPeepsDemoVpcPrivateSubnet2Subnet9ED7641C:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.192.0/18
      VpcId:
        Ref: famousPeepsDemoVpc963C576A
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: famousPeepsStack/famousPeepsDemoVpc/PrivateSubnet2
        - Key: aws-cdk:subnet-name
          Value: Private
        - Key: aws-cdk:subnet-type
          Value: Private
    Metadata:
      aws:cdk:path: famousPeepsStack/famousPeepsDemoVpc/PrivateSubnet2/Subnet
  famousPeepsDemoVpcPrivateSubnet2RouteTable0D5542DB:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: famousPeepsDemoVpc963C576A
      Tags:
        - Key: Name
          Value: famousPeepsStack/famousPeepsDemoVpc/PrivateSubnet2
    Metadata:
      aws:cdk:path: famousPeepsStack/famousPeepsDemoVpc/PrivateSubnet2/RouteTable
  famousPeepsDemoVpcPrivateSubnet2RouteTableAssociation15D2B301:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: famousPeepsDemoVpcPrivateSubnet2RouteTable0D5542DB
      SubnetId:
        Ref: famousPeepsDemoVpcPrivateSubnet2Subnet9ED7641C
    Metadata:
      aws:cdk:path: famousPeepsStack/famousPeepsDemoVpc/PrivateSubnet2/RouteTableAssociation
  famousPeepsDemoVpcPrivateSubnet2DefaultRoute4D9F88C4:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: famousPeepsDemoVpcPrivateSubnet2RouteTable0D5542DB
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: famousPeepsDemoVpcPublicSubnet1NATGateway26000C9E
    Metadata:
      aws:cdk:path: famousPeepsStack/famousPeepsDemoVpc/PrivateSubnet2/DefaultRoute
  famousPeepsDemoVpcIGWE9CBD114:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: famousPeepsStack/famousPeepsDemoVpc
    Metadata:
      aws:cdk:path: famousPeepsStack/famousPeepsDemoVpc/IGW
  famousPeepsDemoVpcVPCGW672D2233:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: famousPeepsDemoVpc963C576A
      InternetGatewayId:
        Ref: famousPeepsDemoVpcIGWE9CBD114
    Metadata:
      aws:cdk:path: famousPeepsStack/famousPeepsDemoVpc/VPCGW
  famousPeepsDemoCluster19F66C18:
    Type: AWS::ECS::Cluster
    Metadata:
      aws:cdk:path: famousPeepsStack/famousPeepsDemoCluster/Resource
  famousPeepsRepo56A0511E:
    Type: AWS::ECR::Repository
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
    Metadata:
      aws:cdk:path: famousPeepsStack/famousPeepsRepo/Resource
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Modules: aws-cdk=2.113.0,@aws-cdk/assets=1.18.0,@aws-cdk/aws-applicationautoscaling=1.18.0,@aws-cdk/aws-autoscaling=1.18.0,@aws-cdk/aws-autoscaling-common=1.18.0,@aws-cdk/aws-autoscaling-hooktargets=1.18.0,@aws-cdk/aws-certificatemanager=1.18.0,@aws-cdk/aws-cloudformation=1.18.0,@aws-cdk/aws-cloudwatch=1.18.0,@aws-cdk/aws-ec2=1.18.0,@aws-cdk/aws-ecr=1.18.0,@aws-cdk/aws-ecr-assets=1.18.0,@aws-cdk/aws-ecs=1.18.0,@aws-cdk/aws-ecs-patterns=1.18.0,@aws-cdk/aws-elasticloadbalancingv2=1.18.0,@aws [...]
    Condition: CDKMetadataAvailable
Conditions:
  CDKMetadataAvailable:
    Fn::Or:
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - af-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ca-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-northwest-1
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-2
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-3
          - Fn::Equals:
              - Ref: AWS::Region
              - il-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - me-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - me-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - sa-east-1
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-2
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-2
